--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     });
   </script>
 
-  <div id="includedContent"></div>
+  <div id="includedContent" style="width: 100%;"></div>
   
+  <div>
   HTML
   <div style="margin-left: 45px">
     <p>(от англ. HyperText Markup Language - "язык разметки гипертекста") -
@@ -52,4 +53,5 @@
           Помимо упрощения структуры документа, в HTML внесена поддержка гипертекста.</u> Мультимелийные</b>
       возможности были добавлены позже.</p>
   </div>
+</div>
 </body>
