--- a/lab212.html
+++ b/lab212.html
@@ -12,10 +12,12 @@
             $("#includedContent").load("lab24.html");
         });
     </script>
-    
+
     <div id="includedContent"></div>
-    
-    <div style="position: absolute; width: 80%; height: 100%; background-image: url('gerbtulgu.png');  background-repeat: no-repeat; Opacity: 0.3;"></div>
+
+    <div
+        style="position: absolute; width: 100%; height: 100%; background-image: url('gerbtulgu.png'); background-size: 100%; background-repeat: no-repeat; Opacity: 0.1;">
+    </div>
     <div>
         <div style='width: 80%; margin: auto;'>
             <div>
@@ -35,44 +37,46 @@
             <div style='text-align: center;'>
                 <h1 id='my_data'>Личные данные</h1>
             </div>
-            <table style='width: 80%; margin:auto;'>
-                <tr>
-                    <td>
-                        Возраст
-                    </td>
-                    <td>
-                        21
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Рост
-                    </td>
-                    <td>
-                        181
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Телефон
-                    </td>
-                    <td>
-                        +79999990000
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Почта
-                    </td>
-                    <td>
-                        g.alex.2000@mail.ru
-                    </td>
-                </tr>
-            </table>
+            <div style="width: 80%; margin: auto;">
+                <table style='width: 80%; margin:auto;'>
+                    <tr>
+                        <td style="width: 10%;">
+                            Возраст
+                        </td>
+                        <td>
+                            21
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Рост
+                        </td>
+                        <td>
+                            181
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Телефон
+                        </td>
+                        <td>
+                            +79999990000
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Почта
+                        </td>
+                        <td>
+                            g.alex.2000@mail.ru
+                        </td>
+                    </tr>
+                </table>
+            </div>
             <div style='text-align: center;'>
                 <h1 id='vuz'>Университет</h1>
             </div>
-            <p style='font-size: 55px;'>
+            <p style='padding-top: 50px; font-size: 55px;'>
                 <img src="avatar.png" alt="Это я на фото, честно" width="200" height="200"
                     style="float:left; margin: 10px;">
                 История Тульского государственного университета начинается в 1930 году, когда постановлением Совета
@@ -96,7 +100,7 @@
             </div>
             <table style='width: 80%; margin:auto;'>
                 <tr>
-                    <td>
+                    <td style="width: 50%;">
                         Номер
                     </td>
                     <td>
@@ -111,7 +115,7 @@
                         +-35
                     </td>
                 </tr>
-            </table>            
+            </table>
         </div>
     </div>
 </body>
