--- a/lab24.html
+++ b/lab24.html
@@ -1,32 +1,39 @@
-<table id="headmenu" cellpadding=5 cellspacing=0 style="display: inline-block;">
-  <tr class="menu_tr" style="width: auto; height: auto;">
-    <td class="menu_td" style="width: auto; height: auto; border: 0px;">
-      Menu:
-      <a href="index.html">
-        Что такое HTML
-      </a> ||
-      <a href="lab12.html">
-        О студенте
-      </a> ||
-      <a href="lab212.html">
-        О университете
-      </a> ||
-      <a href="lab23_32.html">
-        Фотогалерея
-      </a> ||
-      <a href="lab31.html">
-        Таблицы
-      </a> ||
-      <a href="lab41.html">
-        Видео1
-      </a> ||
-      <a href="lab42.html">
-        Видео2
-      </a> ||
-      <a href="lab43.html">
-        Аудио
-      </a>
-    </td>
-  </tr>
+<style>
+  .menu { 
+          width:140px; 
+          height:25px; 
+          background:#f1f1f1; 
+          float:left; 
+          margin: 0 15px 15px 0; 
+          text-align:center;
+          padding: 10px;
+          }
+  </style>
+<div style="width: 100%;text-align: center;">
+    <div class="menu">
+        <a href="index.html">Что такое HTML2</a>
+    </div>
+    <div class="menu">
+      <a href="lab12.html"> О студенте</a>
+    </div>
+    <div class="menu">
+      <a href="lab212.html">О университете</a>
+    </div>
+    <div class="menu">
+      <a href="lab23_32.html">Фотогалерея</a>
+    </div>
+    <div class="menu">
+      <a href="lab31.html">Таблицы</a>
+    </div>
+    <div class="menu">
+      <a href="lab41.html">Видео1</a>
+    </div>
+    <div class="menu">
+      <a href="lab42.html"> Видео2</a>
+    </div>
+    <div class="menu">
+      <a href="lab43.html">Аудио</a>
+    </div>
 
-</table>
+</div>
+  <div style="width:100%; height:1px; clear:both;"></div> 
